Fix image tag formatting in index.html

--- a/index.html
+++ b/index.html
@@ -1223,7 +1223,7 @@
         <h2 class="section-title">My List</h2>
         <div class="card-row">
             <div class="movie-card" onclick="openMoviePage('Dark Knight')">
-                <img src="https://image.tmdb.org/t/p/w500/8Gxv8gSFCU0XGDykEGv7zR1n2ua.jpg" alt="Movie">
+                <img src="https://image.tmdb.org/t/p/w500/8Gxv8gSFCU0XGDykEGv7zR1n2ua.jpg">
                 <div class="card-overlay">
                     <div class="card-title">The Dark Knight</div>
                 </div>
