--- a/index.html
+++ b/index.html
@@ -884,11 +884,12 @@
     <section class="content-section" id="movies">
         <h2 class="section-title">Blockbuster Action</h2>
         <div class="card-row">
-            <div class="movie-card" onclick="openMoviePage('RRR')">
+            <div class="movie-card" onclick="hubby.html ('RRR')">
                 <img src="https://image.tmdb.org/t/p/w500/nEufeZlyAOLqO2brrs0yeF1lgEO.jpg" alt="RRR">
                 <div class="card-overlay">
                     <div class="card-title">RRR</div>
                     <div class="card-meta">2022 • Action</div>
+                    
                 </div>
             </div>
             <div class="movie-card" onclick="openMoviePage('KGF 2')">
