--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script
+  type="text/javascript"
+  src="https://pl28241528.effectivegatecpm.com/5b/1a/94/5b1a940aef81d8dcfea788746ae130a9.js"
+></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StreamFlix - Watch Movies & TV Shows Online</title>
@@ -1183,5 +1187,10 @@
             });
         });
     </script>
+
+    <script
+  type="text/javascript"
+  src="https://pl28241525.effectivegatecpm.com/44/9c/38/449c38617ff8341064d879fa55f2884f.js"
+></script>
 </body>
 </html>
